version/0.32/_sources/api/solver/_autosummary/settings/phase_11.rst.txt
:orphan:

.. _phase_11:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_11
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_11_child <phase_11_child>`


.. rubric:: Included in:

==========================================================   ============================================

Parent                                                                                            Summary

==========================================================   ============================================
:ref:`settings_9 <settings_9>`                                         Domain name to define settings on.

:ref:`mass_flow_outlet_1_child <mass_flow_outlet_1_child>`       'child_object_type' of mass_flow_outlet.

==========================================================   ============================================

